openscholar/themes/os_basetheme/css/global.pages.css
/* ... */
.contextual-links-region:hover .contextual-links-region a.contextual-links-trigger {
    display: none;
}
.contextual-links-region .contextual-links-region:hover a.contextual-links-trigger {
    display: block;
}
.region-content-top .contextual-links-region:first-child .contextual-links-wrapper {
    right: 35px;
}
.node-type-page .region-content-top .contextual-links-region:first-child .contextual-links-wrapper {
    right: 150px;
}
/** OVERLAY MODAL OVERRIDES **/
/* The overlay should never be open with os_basetheme. This is here in case we miss
 * a path that needs the cp_theme activated */

#overlay-close,
#overlay-close:hover {
    background: url('../images/scholarbase-sprite.png') no-repeat 0 -770px;
    width: 30px;
    height: 30px;
    position: relative;
    margin: -38px;
}
#overlay-titlebar {
    padding: 7px 10px 17px;
    position: relative;
    white-space: nowrap;
    z-index: 100;
    background: #EFEFEF;
    border-bottom: 2px solid #C4C2C2;
    height: 24px;
}
#overlay-title {
    float: left;
    margin: 0;
    padding: 0.3em 0;
    color: #666;
    font-size: 20px;
    font-weight: normal;
}
#overlay-tabs {
    margin: -30px 0 0;
    right: 50px;
}
div[aria-describedby^="event-popover-"],
div[aria-describedby*=" event-popover-"] {
    border: 1px solid #CCC;
    -webkit-box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.4);
    -moz-box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.4);
    box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.4);
}
.popover-pointer {
    background: url('../images/event-popover_arrow.png') no-repeat center center;
    bottom: -12px;
    width: 20px;
    height: 20px;
    position: absolute;
    left: 140px;
}
div[aria-describedby^="event-popover-"] .ui-icon-closethick,
div[aria-describedby*=" event-popover-"] .ui-icon-closethickt {
    background: url('../images/scholarbase-sprite.png') no-repeat 0 -474px;
}
div[aria-describedby^="event-popover-"] .ui-widget-header .ui-state-default:hover,
div[aria-describedby^="event-popover-"] .ui-widget-header .ui-state-default:hover,
div[aria-describedby^="event-popover-"] .ui-widget-header .ui-state-default,
div[aria-describedby^="event-popover-"] .ui-widget-header .ui-state-default {
    border: none;
    background: none;
}
div[aria-describedby^="event-popover-"] .ui-dialog-titlebar,
div[aria-describedby*=" event-popover-"] .ui-dialog-titlebar,
div[aria-describedby^="event-popover-"] .ui-dialog-content,
div[aria-describedby*=" event-popover-"] .ui-dialog-content {
    padding: 0 1em;
    overflow: initial;
}
div[id^=event-popover] .event-title a {
    outline: none;
    color: #215990;
}
/** MODAL OVERRIDES for OS ORG ROADMAP PAGE **/

.page-roadmap .ui-dialog {
    z-index: 500;
    -webkit-box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.4);
    -moz-box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.4);
    box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.4);
}
.page-roadmap .ui-dialog-titlebar {
    padding: 7px 10px 17px;
    position: relative;
    white-space: nowrap;
    z-index: 100;
    background: #EFEFEF !important;
    border-bottom: 2px solid #C4C2C2;
    height: 24px;
}
.page-roadmap .ui-dialog-title {
    float: left;
    margin: 0;
    padding: 0.3em 0;
    color: #666;
    font-size: 24px;
    font-weight: normal;
    font: "Lucida Grande", "Lucida Sans Unicode", sans-serif;
}
.page-roadmap .roadmap-gs-link {
    display: block;
    margin-bottom: 20px;
}
.page-roadmap .ui-dialog .ui-dialog-content {
    padding: 2em;
    width: 93% !important;
}
@-moz-document url-prefix() {
    .page-roadmap .ui-dialog .ui-dialog-content {
        width: calc(100% - 4em) !important;
    }
}
.page-roadmap .ui-icon-closethick {
    background: url('../images/scholarbase-sprite.png') no-repeat 0 -770px;
    width: 30px;
    height: 30px;
    position: relative;
    margin: -5px -20px;
}
.page-roadmap .ui-button.ui-widget.ui-state-default {
    border: none;
    background: none;
}
.page-roadmap strong:first-child {
    font-size: 18px;
}
.page-roadmap .ui-dialog-content {
    max-height: 570px !important;
}
.page-roadmap .ui-dialog-content strong:first-child {
    display: block;
    margin: 15px 0;
    font-size: 16px;
}
/** MEDIA BROWSER MODAL OVERRIDES **/

#mediaBrowser {
    padding: 0;
    border-radius: 0;
    background: #FFF;
    -moz-box-shadow: 0 4px 26px rgba(0, 0, 0, 0.5);
    -webkit-box-shadow: 0 4px 26px rgba(0, 0, 0, 0.5);
    box-shadow: 0 4px 26px rgba(0, 0, 0, 0.5);
}
.ui-corner-all {
    border-radius: 0;
    border: 0;
}
.ui-dialog.ui-front.media-wrapper {
    z-index: 500;
}
#media-browser-tabset .media-browser-tab {
    border: none;
}
#media-browser-tabset .ui-tabs-nav {
    border-bottom: 1px solid #AAAAAA;
    border-left: none;
    border-right: none;
    border-top: none;
}
.ui-widget-header {
    background: none !important;
}
/** OS LOGIN CONTAINER STYLES **/
/** SLIDER **/

.sv-list-biblio.sv-list-view-slide_teaser .biblio-abstract-display.os-slider,
.os-slider {
    display: none;
    color: black;
    position: static;
    width: auto;
    background: #F1F1F1;
    border: 1px solid #C0C5CC;
    padding: 1em;
}
.sv-list-view-slide_teaser .os-slider,
.node-type-faq .os-slider,
.page-faq .os-slider {
    border: none;
    padding: 0;
    background: none !important;
}
.sv-list-biblio.sv-list-view-slide_teaser .biblio-abstract-display.os-slider {
    background: #F1F1F1 !important;
}
div.toggle {
    cursor: pointer;
}
.sv-list-person.sv-list-view-slide_teaser .toggle h1.node-title {
    color: #215990;
}
.block-boxes-os_sv_list_box .sv-list-class.sv-list-view-slide_teaser .os-slider li {
    list-style: none !important;
}
.field-name-og-vocabulary a.toggle:before {
    background: url('../images/scholarbase-sprite.png') 3px -194px no-repeat;
    padding: 1px 0 3px 14px;
    content: '';
}
.field-name-og-vocabulary a.toggle.expanded:before {
    background: url('../images/scholarbase-sprite.png') -12px -194px no-repeat;
    padding: 1px 0 3px 14px;
    content: '';
}
/* ... */

